# xobliam

./: .env.example  .gitignore  CHANGELOG.md  README.md  create_shortcut.ps1  launch.py  pyproject.toml  requirements.txt  run_xobliam.bat
tests/: __init__.py  test_analytics.py  test_fetcher.py  test_smart_delete.py  test_taxonomy.py
xobliam/: __init__.py  app.py  main.py
xobliam/analytics/: __init__.py  daily_distribution.py  date_extractor.py  label_audit.py  label_suggester.py  open_rate.py  sender_analysis.py  time_patterns.py
xobliam/auth/: __init__.py  credentials.py  oauth.py
xobliam/fetcher/: __init__.py  cache.py  label_ops.py  labels.py  messages.py
xobliam/smart_delete/: __init__.py  candidate_finder.py  exception_detector.py  executor.py  safety_scorer.py
xobliam/taxonomy/: __init__.py  classifier.py  rules.py
xobliam/ui/: __init__.py  cli.py
xobliam/ui/pages/: __init__.py  analytics.py  dashboard.py  labels.py  settings.py  setup.py  smart_delete.py  taxonomy.py
